--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
-addopts = "-v --cov=patient_encounter_system --cov-report=term-missing"
+addopts = "-v --cov=src --cov-report=term-missing"
+
 
 [tool.black]
 line-length = 88
