--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "uvicorn (>=0.40.0,<0.41.0)",
     "pytest (>=9.0.2,<10.0.0)",
     "pytest-cov (>=7.0.0,<8.0.0)",
-    "ruff (>=0.14.14,<0.15.0)",
     "sqlalchemy (>=2.0.46,<3.0.0)",
     "alembic (>=1.18.3,<2.0.0)",
     "mysql-connector-python (>=9.6.0,<10.0.0)",
@@ -36,7 +35,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
-addopts = "-v --cov=src --cov-report=term-missing"
+addopts = "-v --cov=src"
 
 
 [tool.black]
@@ -50,3 +49,7 @@ target-version = "py310"
 
 [tool.bandit]
 exclude_dirs = ["tests"]
+[dependency-groups]
+dev = [
+    "ruff (>=0.15,<0.16)"
+]
